# FIMLS_version_1

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt  run_FIMLS_bash.sh
config/: parameters_processing.yaml
scripts/data_processing/: CMakeLists.txt  clear_and_filter.cpp  pipeline.py  pipeline_old.py  tile_pointcloud.cpp
scripts/data_processing/src/: augmentation.cpp  augmentation.h  downsample.cpp  downsample.h  sor_filter.cpp  sor_filter.h  tile.cpp  tile.h
